<resources>
    <string name="app_name">NewsMate</string>
    <string name="user_Text">User</string>
    <string name="pass_text">Pass</string>
    <string name="login">login</string>
    <string name="savedArticles">saved articles</string>
    <string name="addKeywords">add keywords</string>
    <string name="darkTheme">dark theme</string>
    <string name="localNews">local news only</string>
    <string name="articles">articles</string>
    <string name="personal">personal</string>
    <string name="accessibility">accessibility</string>
    <string name="acc">account</string>
    <string name="refresh">refresh</string>
    <string name="settings">settings</string>
    <string name="logout">log out</string>
    <string name="add">add</string>
    <string name="register">register</string>
    <string name="invalid_user">invalid user</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="newStory">New story available</string>
    <string name="notify">notify?</string>
    <string name="region">region</string>
    <string name="preference_file_key">com.example.newsmate.PREFERENCE_FILE_KEY</string>


    <string-array name ="tabs">
        <item>News</item>
        <item>Saved</item>
    </string-array>

    <string-array name = "Countries">
        <item>gb</item>
        <item>us</item>
        <item>fr</item>
        <item>de</item>
        <item>cn</item>
        <item>jp</item>
        <item>it</item>
        <item>cn</item>
    </string-array>

</resources>