<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/articles"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorMasked"/>

    <TextView
        android:id="@+id/addKeywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:text="@string/addKeywords"
        android:textSize="30dp"
        android:textColor="@color/colorText"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorMasked"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/localNewsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/localNews"
        android:textSize="30dp"
        android:textColor="@color/colorText"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorMasked"/>

    <TextView
        android:id="@+id/savedArticles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:text="@string/savedArticles"
        android:textSize="30dp"
        android:textColor="@color/colorText"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorMasked"/>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:text="@string/accessibility"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        />
   <View
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:background="@color/colorMasked"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/darkThemeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/darkTheme"
        android:textSize="30dp"
        android:textColor="@color/colorText"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorMasked"/>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:text="@string/personal"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorMasked"/>

    <TextView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:text="@string/acc"
        android:textSize="30dp"
        android:textColor="@color/colorText"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorMasked"/>

</LinearLayout>