<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="80dp"
        android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_Text"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/pass_text"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/register"/>

</androidx.appcompat.widget.LinearLayoutCompat>