<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/keyword_field"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/addKeywords"
            android:textColorHint="@color/colorMasked"
            android:layout_margin="10dp"
            android:background="@color/colorBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/keyword_field_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:textColor="@color/colorText"
                 />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/add"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:text="@string/notify"/>
    <androidx.recyclerview.widget.RecyclerView class="androidx.recyclerview.widget.RecyclerView"
        android:id="@+id/keyword_recycler_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="vertical" />

</androidx.appcompat.widget.LinearLayoutCompat>